Add latlng property
